Yamlfiles/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  sample
  namespace: default
  labels:
    app:  sample
spec:
  selector:
    matchLabels:
      app: sample
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  sample
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  sample
        image:  gcr.io/k8s-minikube/storage-provisioner:v5
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_status/healthz
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
      #   envFrom:
      #   - name: DB_HOST
      #     valueFrom:
      #       configMapKeyRef:
      #         name: game-demo
      #         key: DB_HOST
      #   ports:
      #   - containerPort:  80
      #     name:  sample
      #   volumeMounts:
      #   - name: localtime
      #     mountPath: /etc/localtime
      # volumes:
      #   - name: localtime
      #     hostPath:
      #       path: /usr/share/zoneinfo/Asia/Shanghai
      # restartPolicy: Always
