Yamlfiles/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample
  namespace: default
  labels:
    app: sample
spec:
  containers:
  - name: sample
    image: gcr.io/k8s-minikube/storage-provisioner:v5
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
  #   env:
  #   - name: DB_HOST
  #     valueFrom:
  #       configMapKeyRef:
  #         name: example-configmap
  #         key: DB_HOST
  #   ports:
  #   - containerPort:  80
  #     name:  http
  #   volumeMounts:
  #   - name: localtime
  #     mountPath: /etc/localtime
  # volumes:
  #   - name: localtime
  #     hostPath:
  #       path: /usr/share/zoneinfo/Asia/Shanghai
  # restartPolicy: Always
