Yamlfiles/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sample
  namespace: default
spec:
  selector:
    matchLabels:
      app: sample # has to match .spec.template.metadata.labels
  serviceName: "sample"
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        app: sample # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: sample
        image: gcr.io/k8s-minikube/storage-provisioner:v5
        ports:
        - containerPort: 80
  #         name: web
  #       volumeMounts:
  #       - name: www
  #         mountPath: /usr/share/nginx/html
  # volumeClaimTemplates:
  # - metadata:
  #     name: www
  #   spec:
  #     accessModes: [ "ReadWriteOnce" ]
  #     storageClassName: "my-storage-class"
  #     resources:
  #       requests:
  #         storage: 1Gi
