Yamlfiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
  namespace: default
spec:
  selector:
    app: sample
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: sample
    protocol: TCP
    port: 
    targetPort: 
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort:
